<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/go_to_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/don_t_show_upicon"
        android:textAllCaps="false"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/go_to_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_show_toolbar"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/go_to_second"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/title_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:hint="@string/input_title"
        app:layout_constraintTop_toBottomOf="@id/go_to_third"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/go_to_fourth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_title_by_navgraph"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/go_to_fifth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_title_by_listener"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/go_to_fourth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>